[package]
name = "voyage-abeon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Make sure to remove dynamic_linking for release builds - unless you want to put the linker into the executable
bevy = {version = "0.13.2", features = ["dynamic_linking"]}
image = "0.24"
winit = "0.29"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
