[package]
name = "voyage-abeon"
version = "0.0.1"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Make sure to remove dynamic_linking for release builds - unless you want to put the linker into the executable
bevy = {version = "0.14.1"}
image = "0.24"
winit = "0.30"
avian3d = { version = "0.1.2", features = ["bevy_scene", "collider-from-mesh", "parallel", "parry-f32", "debug-plugin", "simd"], default-features = false }
itertools = "0.13.0"

[profile.release.package."*"]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
debug = 1

[[bin]]
name = "voyage-abeon"
path = "src/main.rs"
